--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -29,8 +29,13 @@ on:
         description: secrets.BUILD_GITHUB_TOKEN
         required: true
 
+      sonar-token:
+        description: secrets.SONAR_TOKEN
+        required: true
+
 jobs:
   ecr:
+    name: ECR
     runs-on: ubuntu-latest
     outputs:
       ecrpw: ${{ steps.getpw.outputs.ecrpw }}
@@ -43,7 +48,7 @@ jobs:
           aws-region: us-east-1
           role-to-assume: ${{ secrets.aws-dev-build-role }}
 
-      - name: ECR generate
+      - name: ECR Generate Password
         id: getpw
         shell: bash
         run: |
@@ -51,9 +56,12 @@ jobs:
           ECR_PW=$(aws ecr get-login-password)
           echo "::set-output name=ecrpw::$ECR_PW"
 
-  test:
-    name: Test
+  run:
+    name: Run
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.github-token }}
+      GITHUB_USERNAME: GitHub
     needs: [ecr]
     services:
       ofi-sql:
@@ -64,16 +72,56 @@ jobs:
           username: AWS
           password: ${{ needs.ecr.outputs.ecrpw }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
+      - uses: actions/checkout@v3
+
+      - name: Cache SonarCloud Packages
+        uses: actions/cache@v3
+        with:
+          path: ~/sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache SonarCloud Scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v3
+        with:
+          path: ./.sonar/scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+
+      - name: Install SonarCloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          New-Item -Path ./.sonar/scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
+
+      - name: Start Sonar Scanner
+        shell: pwsh
+        run: |
+          $key = "${{ github.repository }}".Replace("/", "_")
+
+          .\.sonar\scanner\dotnet-sonarscanner begin `
+            /o:orthofi `
+            /k:$key `
+            /d:sonar.host.url=https://sonarcloud.io `
+            /d:sonar.cs.opencover.reportsPaths=artifacts/**/*.xml `
+            /d:sonar.login="${{ secrets.sonar-token }}"
 
       - name: Test
+        shell: pwsh
         env:
-          GITHUB_TOKEN: ${{ secrets.github-token }}
-          GITHUB_USERNAME: foo
-        run: dotnet test ${{ inputs.solution }} -c Release --nologo --filter ${{ inputs.filter }} -r artifacts --collect:"XPlat Code Coverage"
+          SONAR_TOKEN: ${{ secrets.sonar-token }}
+        run: |
+          dotnet test ${{ inputs.solution }} -c Release --nologo --filter ${{ inputs.filter }} -r artifacts --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
-      - uses: actions/upload-artifact@v2
+      - name: Stop Sonar Scanner
+        shell: pwsh
         if: always()
-        with:
-          name: integration_tests
-          path: artifacts
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner end `
+            /d:sonar.login="${{ secrets.sonar-token }}"
