--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -117,7 +117,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.sonar-token }}
         run: |
-          dotnet test ${{ inputs.solution }} -v q -c Release --nologo --filter ${{ inputs.filter }} -r artifacts --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+          dotnet test ${{ inputs.solution }} -v q -c Release --nologo --filter ${{ inputs.filter }} --results-directory artifacts --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
       - name: Stop Sonar Scanner
         shell: pwsh
