--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           set -eo pipefail
           ECR_PW=$(aws ecr get-login-password)
-          echo "::set-output name=ecrpw::$ECR_PW"
+          echo "ecrpw=$ECR_PW" >> $GITHUB_OUTPUT
 
   run:
     name: Run
@@ -72,8 +72,9 @@ jobs:
           username: AWS
           password: ${{ needs.ecr.outputs.ecrpw }}
     steps:
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
+          distribution: zulu
           java-version: 1.11
 
       - uses: actions/checkout@v3
