--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,8 +42,9 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.github-token }}
       GITHUB_USERNAME: GitHub
     steps:
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
+          distribution: zulu
           java-version: 1.11
 
       - uses: actions/checkout@v3
@@ -85,7 +86,7 @@ jobs:
       - name: Login to AWS
         if: ${{ inputs.ssm-parameter-paths }}
         uses: aws-actions/configure-aws-credentials@v1
-        with: 
+        with:
           aws-access-key-id: ${{ secrets.aws-access-key-id }}
           aws-secret-access-key: ${{ secrets.aws-secret-access-key}}
           aws-region: us-east-1
