--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -19,7 +19,7 @@ jobs:
     outputs:
       ecrpw: ${{ steps.getpw.outputs.ecrpw }}
     steps:
-      - uses: aws-actions/configure-aws-credentials@v1
+      - uses: aws-actions/configure-aws-credentials@v1-node16
         id: setup
         with:
           aws-access-key-id: secrets.BUILD_AWS_ACCESS_KEY_ID
