fix: incorrect secret syntax

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -22,10 +22,10 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@v1-node16
         id: setup
         with:
-          aws-access-key-id: secrets.BUILD_AWS_ACCESS_KEY_ID
-          aws-secret-access-key: secrets.BUILD_AWS_SECRET_ACCESS_KEY
+          aws-access-key-id: ${{ secrets.BUILD_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.BUILD_AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-to-assume: secrets.DEV_BUILD_ROLE
+          role-to-assume: ${{ secrets.DEV_BUILD_ROLE }}
 
       - name: ECR Generate Password
         id: getpw
