--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,7 +73,7 @@ jobs:
           aws-access-key-id: ${{ secrets.BUILD_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.BUILD_AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-to-assume: ${{ vars.AWS_BUILD_ROLE }}
+          role-to-assume: ${{ secrets.OCKERS_BUILD_ROLE }}
 
       - name: Get Parameters
         if: ${{ inputs.ssm-parameter-paths }}
