--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,15 +107,35 @@ jobs:
           Write-Host "---------------------------------------------------------------------"
           $testAssemblies = Get-ChildItem -Recurse -Filter *.dll | Where-Object { $_.Name -match 'Test' -and $_.FullName -match 'bin\\Debug\\' }
 
-          foreach ($assembly in $testAssemblies) {
-            $assemblyName = [System.IO.Path]::GetFileNameWithoutExtension($assembly.FullName)
-            $trxFileName = "TestResults_$($assemblyName)_$(Get-Date -Format 'yyyyMMddHHmmss').trx"
+          $testAssemblies | ForEach-Object -Parallel {
+              $assembly = $_
+              $assemblyName = [System.IO.Path]::GetFileNameWithoutExtension($assembly.FullName)
+              $trxFileName = "TestResults_$($assemblyName)_$(Get-Date -Format 'yyyyMMddHHmmss').trx"
 
-            Write-Host ""
-            Write-Host "---------------------------------------------------------------------"
-            Write-Host "Running dotnet test for $($assembly.FullName)"
-            Write-Host "---------------------------------------------------------------------"
-            dotnet test $assembly.FullName --logger "trx;LogFileName=$trxFileName" --results-directory artifacts --verbosity minimal
+              Write-Host ""
+              Write-Host "---------------------------------------------------------------------"
+              Write-Host "Running dotnet test for $($assembly.FullName)"
+              Write-Host "---------------------------------------------------------------------"
+              
+              $output = dotnet test $assembly.FullName --logger "trx;LogFileName=$trxFileName" --results-directory artifacts --verbosity minimal 2>&1
+              
+              if ($LASTEXITCODE -ne 0) {
+                  if ($output -match "No test source files were specified") {
+                      Write-Host "No tests found in $assemblyName. Skipping."
+                  } else {
+                      Write-Host "Tests failed for $assemblyName with exit code $LASTEXITCODE"
+                      Write-Host $output
+                      $Global:TestsFailed = $true
+                  }
+              } else {
+                  Write-Host "Tests passed for $assemblyName"
+              }
+          } -ThrottleLimit 4
+
+          if ($Global:TestsFailed) {
+              exit 1
+          } else {
+              exit 0
           }
 
       - name: Publish Test Results (.NET Framework)
