--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -41,14 +41,26 @@ jobs:
       - name: Docker Prep
         shell: pwsh
         run: |
-          Write-Host "Finding and stopping containers using port 1433, to avoid any conflicts..."
-          $container_id = $(docker ps --filter "publish=1433" --format "{{.ID}}")
-          if (-not [string]::IsNullOrEmpty($container_id)) {
+          Write-Host "Finding and stopping containers using port 1433 or with names containing 'ofi_sql'..."
+          
+          $port_container_id = $(docker ps --filter "publish=1433" --format "{{.ID}}")
+          if (-not [string]::IsNullOrEmpty($port_container_id)) {
             Write-Host "Stopping and removing container blocking port 1433..."
-            docker stop $container_id | Out-Null
-            docker rm $container_id | Out-Null
+            docker stop $port_container_id | Out-Null
+            docker rm $port_container_id | Out-Null
           } else {
             Write-Host "No containers blocking port 1433."
+          }
+          
+          $name_containers = $(docker ps -a --filter "name=ofi_sql" --format "{{.ID}}")
+          if (-not [string]::IsNullOrEmpty($name_containers)) {
+            Write-Host "Stopping and removing containers with names containing 'ofi_sql'..."
+            $name_containers -split "\s+" | ForEach-Object {
+              docker stop $_ | Out-Null
+              docker rm $_ | Out-Null
+            }
+          } else {
+            Write-Host "No containers with names containing 'ofi_sql'."
           }
 
       - name: Start SQL Service
